[package]
name = "rusty-tetris"
version = "0.0.1"
authors = ["Philipp Degler <deglerp@gmail.com"]
keywords = ["tetris", "board game"]

[[bin]]
name = "rusty-tetris"
path = "src/main.rs"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dependencies.piston2d-sprite]
git = "https://github.com/pistondevelopers/sprite"

[dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.rand]
git = "https://github.com/rust-lang/rand"
